feat: add normilize.css

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -2,6 +2,7 @@
 body {
   display: flex;
   flex-direction: column;
+  background: url("./assets/home.png");
 }
 
 /*# sourceMappingURL=index.css.map */
