--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,37 +1,126 @@
 /* sass ./src/sass/index.scss ./src/css/index.css */
-
+/* sass --watch ./src/sass/index.scss:./src/css/index.css */
 
 body {
     display: flex;
     flex-direction: column;
     background: url('../../assets/home.png');
-
-    .containter-ancients {
+    .title {
+      margin-top: 10px;
+      color: #FFFFFF;
+      text-align: center;
+      font-size: 25px;
+      font-weight: 500;
+    }
+    .card {
+      width: 175px;
+      height: 250px;
+      border: solid #000000 1px;
+      border-radius: 10px;
+      &:hover {
+        transform: scale(1.2);
+      }
+  }
+    .container-ancients-cards {
         display: flex;
         justify-content: space-around;
         margin: 20px;
-        .card {
-            width: 200px;
-            height: 300px;
-            border: solid #000000 1px;
-            border-radius: 10px;
-        }
-        .card-ancient-1 {
+        #ancient-1 {
             background: url('../../assets/Ancients/Azathoth.png');
             background-size: cover;
           }
-          .card-ancient-2 {
+          #ancient-2 {
             background: url('../../assets/Ancients/Cthulthu.png');
             background-size: cover;
           }
-          .card-ancient-3 {
+          #ancient-3 {
             background: url('../../assets/Ancients/IogSothoth.png');
             background-size: cover;
           }
 
-          .card-ancient-4 {
+          #ancient-4 {
             background: url('../../assets/Ancients/ShubNiggurath.png');
             background-size: cover;
           }
     }
+
+    .container-difficulty-buttons {
+      display: flex;
+      justify-content: space-around;
+      margin: 20px;
+
+      .difficulty-button {
+        width: 100px;
+        padding: 10px;
+        background: transparent;
+        border: solid #000000 3px;
+        border-radius: 5px;
+        color: #FFFFFF;
+        &:hover {
+          transform: scale(1.1);
+        }
+
+      }
+    }
+
+    .container-deck-cards {
+      display: flex;
+      justify-content: space-around;
+      margin: 20px;
+
+      .tracker {
+        /* display: none; */
+
+        .stage-title {
+          font-size: 18px;
+        }
+
+        .stage-values-container {
+          display: flex;
+          justify-content: center;
+          gap: 15px;
+
+          .stage-value {
+            width: 60px;
+            height: 40px;
+            border: solid white 2px;
+            color: #FFFFFF;
+            text-align: center;
+            font-size: 25px;
+            font-weight: 600;
+          }
+
+          #stage-value-1-1,
+          #stage-value-2-1,
+          #stage-value-3-1 {
+            background-color: darken(green, 10%);
+          }
+
+          #stage-value-1-2,
+          #stage-value-2-2,
+          #stage-value-3-2 {
+            background-color: darken(yellow, 10%);
+          }
+
+          #stage-value-1-3,
+          #stage-value-2-3,
+          #stage-value-3-3 {
+            background-color: darken(blue, 15%);
+          }
+
+        }
+      }
+
+      #deck {
+        background: url('../../assets/mythicCardBackground.png'); 
+        background-size: cover;
+      }
+
+      #deck, 
+      #current {
+        opacity: 0;
+        margin-top: 40px;
+      }
+    }
+
 }
