--- a/src/css/index.css
+++ b/src/css/index.css
@@ -20,6 +20,7 @@ body .card {
 }
 body .card:hover {
   transform: scale(1.2);
+  cursor: pointer;
 }
 body .container-ancients-cards {
   display: flex;
@@ -42,12 +43,15 @@ body .container-ancients-cards #ancient-4 {
   background: url("../../assets/Ancients/ShubNiggurath.png");
   background-size: cover;
 }
-body .container-difficulty-buttons {
+body .container-difficulty {
+  opacity: 0;
+}
+body .container-difficulty .container-difficulty-buttons {
   display: flex;
   justify-content: space-around;
   margin: 20px;
 }
-body .container-difficulty-buttons .difficulty-button {
+body .container-difficulty .container-difficulty-buttons .difficulty-button {
   width: 100px;
   padding: 10px;
   background: transparent;
@@ -55,8 +59,9 @@ body .container-difficulty-buttons .difficulty-button {
   border-radius: 5px;
   color: #FFFFFF;
 }
-body .container-difficulty-buttons .difficulty-button:hover {
+body .container-difficulty .container-difficulty-buttons .difficulty-button:hover {
   transform: scale(1.1);
+  cursor: pointer;
 }
 body .container-deck-cards {
   display: flex;
@@ -64,7 +69,7 @@ body .container-deck-cards {
   margin: 20px;
 }
 body .container-deck-cards .tracker {
-  /* display: none; */
+  opacity: 0;
 }
 body .container-deck-cards .tracker .stage-title {
   font-size: 18px;
@@ -83,19 +88,19 @@ body .container-deck-cards .tracker .stage-values-container .stage-value {
   font-size: 25px;
   font-weight: 600;
 }
-body .container-deck-cards .tracker .stage-values-container #stage-value-1-1,
-body .container-deck-cards .tracker .stage-values-container #stage-value-2-1,
-body .container-deck-cards .tracker .stage-values-container #stage-value-3-1 {
+body .container-deck-cards .tracker .stage-values-container #stage-1-green,
+body .container-deck-cards .tracker .stage-values-container #stage-2-green,
+body .container-deck-cards .tracker .stage-values-container #stage-3-green {
   background-color: #004d00;
 }
-body .container-deck-cards .tracker .stage-values-container #stage-value-1-2,
-body .container-deck-cards .tracker .stage-values-container #stage-value-2-2,
-body .container-deck-cards .tracker .stage-values-container #stage-value-3-2 {
+body .container-deck-cards .tracker .stage-values-container #stage-1-brown,
+body .container-deck-cards .tracker .stage-values-container #stage-2-brown,
+body .container-deck-cards .tracker .stage-values-container #stage-3-brown {
   background-color: #cccc00;
 }
-body .container-deck-cards .tracker .stage-values-container #stage-value-1-3,
-body .container-deck-cards .tracker .stage-values-container #stage-value-2-3,
-body .container-deck-cards .tracker .stage-values-container #stage-value-3-3 {
+body .container-deck-cards .tracker .stage-values-container #stage-1-blue,
+body .container-deck-cards .tracker .stage-values-container #stage-2-blue,
+body .container-deck-cards .tracker .stage-values-container #stage-3-blue {
   background-color: #0000b3;
 }
 body .container-deck-cards #deck {
@@ -106,6 +111,9 @@ body .container-deck-cards #deck,
 body .container-deck-cards #current {
   opacity: 0;
   margin-top: 40px;
+}
+body #deck-title {
+  opacity: 0;
 }
 
 /*# sourceMappingURL=index.css.map */
