--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -19,6 +19,7 @@ body {
       border-radius: 10px;
       &:hover {
         transform: scale(1.2);
+        cursor: pointer;
       }
   }
     .container-ancients-cards {
@@ -44,22 +45,27 @@ body {
           }
     }
 
-    .container-difficulty-buttons {
-      display: flex;
-      justify-content: space-around;
-      margin: 20px;
+    .container-difficulty {
+      opacity: 0;
 
-      .difficulty-button {
-        width: 100px;
-        padding: 10px;
-        background: transparent;
-        border: solid #000000 3px;
-        border-radius: 5px;
-        color: #FFFFFF;
-        &:hover {
-          transform: scale(1.1);
+      .container-difficulty-buttons {
+        display: flex;
+        justify-content: space-around;
+        margin: 20px;
+  
+        .difficulty-button {
+          width: 100px;
+          padding: 10px;
+          background: transparent;
+          border: solid #000000 3px;
+          border-radius: 5px;
+          color: #FFFFFF;
+          &:hover {
+            transform: scale(1.1);
+            cursor: pointer;
+          }
+  
         }
-
       }
     }
 
@@ -69,7 +75,7 @@ body {
       margin: 20px;
 
       .tracker {
-        /* display: none; */
+        opacity: 0;
 
         .stage-title {
           font-size: 18px;
@@ -90,24 +96,23 @@ body {
             font-weight: 600;
           }
 
-          #stage-value-1-1,
-          #stage-value-2-1,
-          #stage-value-3-1 {
+          #stage-1-green,
+          #stage-2-green,
+          #stage-3-green {
             background-color: darken(green, 10%);
           }
 
-          #stage-value-1-2,
-          #stage-value-2-2,
-          #stage-value-3-2 {
+          #stage-1-brown,
+          #stage-2-brown,
+          #stage-3-brown {
             background-color: darken(yellow, 10%);
           }
 
-          #stage-value-1-3,
-          #stage-value-2-3,
-          #stage-value-3-3 {
+          #stage-1-blue,
+          #stage-2-blue,
+          #stage-3-blue {
             background-color: darken(blue, 15%);
           }
-
         }
       }
 
@@ -121,6 +126,11 @@ body {
         opacity: 0;
         margin-top: 40px;
       }
+
+    }
+
+    #deck-title {
+      opacity: 0;
     }
 
 }
